--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 @font-face {font-family: "Linotype Feltpen W02 Medium";
-  src: url("d6394565-804f-4a26-88d1-4d982c7eed9e.woff2");
+  src: url("special.woff2");
   font-display: swap;
 }
 
